--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 //necessary for room
 apply plugin: 'kotlin-kapt'
 
+//necessary for navigation
 apply plugin: 'androidx.navigation.safeargs'
 
 
